--- a/Desktop/sms/netlify.toml
+++ b/Desktop/sms/netlify.toml
@@ -1,6 +1,7 @@
 [build]
   publish = "."
   functions = "netlify/functions"
+  command = "echo 'No build needed - static files only'"
 
 [functions]
   node_bundler = "esbuild"
