fix: Twilio send-sms fallback (FROM/PHONE/Messaging Service) + debug options

--- a/Downloads/soundfactory-nyc-with-chat/.env.example
+++ b/Downloads/soundfactory-nyc-with-chat/.env.example
@@ -16,7 +16,10 @@ SMS_PEPPER="change-this-random-long-string" # used in hashing verification codes
 # Twilio credentials (required if using Twilio path)
 TWILIO_ACCOUNT_SID="ACxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
 TWILIO_AUTH_TOKEN="xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
-TWILIO_FROM="+15555550123" # Your Twilio phone number in E.164
+TWILIO_FROM="+15555550123" # E.164 number (fallback priority 1)
+TWILIO_PHONE_NUMBER="+15555550123" # Backwards compatibility (used if TWILIO_FROM unset)
+TWILIO_MESSAGING_SERVICE_SID="MGxxxxxxxxxxxxxxxxxxxxxxxxxxxxx" # Preferred (overrides FROM when set)
+SMS_DEBUG="false" # Set true to include Twilio error codes in responses (DO NOT enable in prod)
 
 # Stripe integration
 STRIPE_SECRET_KEY="sk_live_or_test_xxx" # server secret
