feat: hybrid SMS flow with Supabase OTP fallback when Twilio fails

--- a/Downloads/soundfactory-nyc-with-chat/.env.example
+++ b/Downloads/soundfactory-nyc-with-chat/.env.example
@@ -5,6 +5,7 @@ SUPABASE_ANON_KEY="public-anon-key"
 
 # Feature flag: if set to 'true' will use Supabase native phone OTP instead of custom Twilio flow
 USE_SUPABASE_PHONE_OTP="false"
+FALLBACK_SUPABASE_OTP="false" # If true, function will return fallback instruction when Twilio fails
 
 # Allow exposing demo codes in responses (ONLY for local dev). Set to 'false' in prod.
 ALLOW_DEMO_CODES="true"
@@ -20,6 +21,7 @@ TWILIO_FROM="+15555550123" # E.164 number (fallback priority 1)
 TWILIO_PHONE_NUMBER="+15555550123" # Backwards compatibility (used if TWILIO_FROM unset)
 TWILIO_MESSAGING_SERVICE_SID="MGxxxxxxxxxxxxxxxxxxxxxxxxxxxxx" # Preferred (overrides FROM when set)
 SMS_DEBUG="false" # Set true to include Twilio error codes in responses (DO NOT enable in prod)
+SMS_MODE="twilio" # Documentational: 'twilio' | 'supabase' | 'hybrid' (not programmatically enforced)
 
 # Stripe integration
 STRIPE_SECRET_KEY="sk_live_or_test_xxx" # server secret
