feat(verify): add Twilio Verify functions, widget, env + docs

--- a/Downloads/soundfactory-nyc-with-chat/.env.example
+++ b/Downloads/soundfactory-nyc-with-chat/.env.example
@@ -20,6 +20,7 @@ TWILIO_AUTH_TOKEN="xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
 TWILIO_FROM="+15555550123" # E.164 number (fallback priority 1)
 TWILIO_PHONE_NUMBER="+15555550123" # Backwards compatibility (used if TWILIO_FROM unset)
 TWILIO_MESSAGING_SERVICE_SID="MGxxxxxxxxxxxxxxxxxxxxxxxxxxxxx" # Preferred (overrides FROM when set)
+TWILIO_VERIFY_SERVICE_SID="VAXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX" # Twilio Verify Service SID for new verify endpoints
 SMS_DEBUG="false" # Set true to include Twilio error codes in responses (DO NOT enable in prod)
 SMS_MODE="twilio" # Documentational: 'twilio' | 'supabase' | 'hybrid' (not programmatically enforced)
 
