Replace legacy SMS with Twilio Verify, add API key + inbound signature option, cleanup frontend wrapper, delete old functions

--- a/Downloads/soundfactory-nyc-with-chat/.env.example
+++ b/Downloads/soundfactory-nyc-with-chat/.env.example
@@ -23,6 +23,10 @@ TWILIO_MESSAGING_SERVICE_SID="MGxxxxxxxxxxxxxxxxxxxxxxxxxxxxx" # Preferred (over
 TWILIO_VERIFY_SERVICE_SID="VAXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX" # Twilio Verify Service SID for new verify endpoints
 SMS_DEBUG="false" # Set true to include Twilio error codes in responses (DO NOT enable in prod)
 SMS_MODE="twilio" # Documentational: 'twilio' | 'supabase' | 'hybrid' (not programmatically enforced)
+SMS_API_KEY="set-a-random-long-admin-key" # Required in header x-api-key for sms-send-message (if set)
+ENABLE_TWILIO_SIGNATURE_CHECK="false" # When true, inbound webhook validates X-Twilio-Signature
+INBOUND_AUTOREPLY="" # Optional auto-reply message for inbound SMS (leave blank to disable)
+TEST_SMS_PHONE="+15555550123" # Used by smoke test script (non-production number)
 
 # Stripe integration
 STRIPE_SECRET_KEY="sk_live_or_test_xxx" # server secret
