--- a/Downloads/soundfactory-nyc-with-chat/netlify.toml
+++ b/Downloads/soundfactory-nyc-with-chat/netlify.toml
@@ -25,13 +25,15 @@
 
 # API redirects to Netlify functions
 [[redirects]]
+[[redirects]]
   from = "/api/send-verification"
-  to = "/.netlify/functions/send-sms"
+  to = "/.netlify/functions/sms-send-code"
   status = 200
 
 [[redirects]]
+[[redirects]]
   from = "/api/verify-code"
-  to = "/.netlify/functions/verify-sms"
+  to = "/.netlify/functions/sms-check-code"
   status = 200
 
 # Twilio Verify (new) endpoints
@@ -57,13 +59,15 @@
 
 # Admin API redirects (same underlying functions, namespaced paths for admin panel)
 [[redirects]]
+[[redirects]]
   from = "/api/admin/send-verification"
-  to = "/.netlify/functions/send-sms"
+  to = "/.netlify/functions/sms-send-code"
   status = 200
 
 [[redirects]]
+[[redirects]]
   from = "/api/admin/verify-code"
-  to = "/.netlify/functions/verify-sms"
+  to = "/.netlify/functions/sms-check-code"
   status = 200
 
 # Force HTTPS
