--- a/Downloads/soundfactory-nyc-with-chat/netlify/functions/package.json
+++ b/Downloads/soundfactory-nyc-with-chat/netlify/functions/package.json
@@ -6,7 +6,7 @@
   "type": "commonjs",
   "dependencies": {
     "@supabase/supabase-js": "^2.45.0",
-    "stripe": "^14.0.0"
-
+    "stripe": "^14.0.0",
+    "twilio": "^4.19.0"
   }
 }
