--- a/Desktop/promo/promoters-new/package.json
+++ b/Desktop/promo/promoters-new/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.75.0",
+    "dotenv": "^17.2.3",
     "stripe": "^14.25.0",
     "twilio": "^5.10.2"
   }
